--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>UI Builder</title>
-    <link rel="shortcut icon" href="assets/img/brand/favicon.svg" type="image/x-icon">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>BrainSeed Networks</title>
+    <link rel="shortcut icon" href="assets/img/brand/favicon.svg" type="image/x-icon" />
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/css/main.css">
-    <!-- <link rel="stylesheet" href="assets/css/animate.css"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <script src="https://kit.fontawesome.com/dfebc2aeb7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -21,7 +20,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <!-- Brand here -->
-                <img src="assets/img/brand/logo.svg" alt="brand">
+                <img src="assets/img/brand/logo.svg" alt="brand" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,17 +45,23 @@
             <div class="row">
                 <!-- Text -->
                 <div class="col-md-6">
-                    <div class="text">
-                        BrainSeed Networks Community
-                    </div>
+                    <div class="text">BrainSeed Networks Community!</div>
+                    <div class="hashtag">#BuildingSuccessTogether</div>
+                    <p class="home-text">
+                        "Empowering tech enthusiasts, one seed at a time".
+                        At BrainSeed Networks, Our community is dedicated
+                        to empowering tech enthusiasts and fostering a love for
+                        technology.
+                    </p>
                     <div class="buttons">
-                        <a href="#" class="btn btn-primary">Contact Us</a>
-                        <a href="#" class="btn btn-outline-secondary ms-3">Join Us</a>
+                        <a href="#" class="btn btn-primary"><i class="icon fas fa-rocket"></i> <span class="ms-2">Contact Us</span></a>
+                        <a href="#" class="btn btn-outline-secondary ms-3"><i class="icon fas fa-handshake"></i><span class="ms-2"> Join
+                            Us</span></a>
                     </div>
                 </div>
                 <!-- Image -->
                 <div class="col-md-6">
-                    <img src="assets/img/hero-img.svg" alt="hero-img" class="w-100">
+                    <img src="assets/img/hero-img.svg" alt="hero-img" class="w-100" />
                 </div>
             </div>
         </div>
